# fastapi_zero

./: .gitignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
fastapi_zero/: app.py  database.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 1814b977763c_inserted_created_at_and_updated_at_.py  5fa916c0423a_create_todo_table.py  681caae0d188_exercicio_3.py  915d16abdbb9_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
